# msvc-intellisense-disaster

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  wrapper.hpp
src/: asio.cpp  main.cpp
